--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <script src="build/JSXTransformer.js"></script>
   </head>
   <body>
-    <div id="main"></div>
     <div class="container">
-      <div class="game-frame" class="row">
-        <div id="upper">
+      <div id="main"></div>
+      <div class="game-frame">
+        <div id="upper" class="row">
           <div id="stars" class="col-sm-5">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
+            <div class="content">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
           </div>
           <div id="equal" class="col-sm-2">
             =
@@ -24,13 +26,17 @@
           <div id="display" class="col-sm-5">
           </div>
         </div>
-        <div id="button">
-          <button type="button" class="btn btn-default">Draw</button>
+        <div id="button" class="row">
+          <div class="col-sm-4 col-sm-offset-4">
+            <button type="button" class="btn btn-default btn-wide">Draw</button>
+          </div>
         </div>
         <div id="lower" class="row">
-          <span class="number">1</span>
-          <span class="number">2</span>
-          <span class="number">3</span>
+          <div class="col-sm-12 content text-center">
+            <span class="number">1</span>
+            <span class="number">2</span>
+            <span class="number">3</span>
+          </div>
         </div>
       </div>
     </div>
